fix: table scrollbar color changed to the theme

--- a/src/scss/filejet-scss/_custom.scss
+++ b/src/scss/filejet-scss/_custom.scss
@@ -361,12 +361,12 @@ body *::-webkit-scrollbar {
 
 body *::-webkit-scrollbar-track {
   box-shadow: none;
-  background-color: var(--bs-purple-light);
+  background-color: var(--bs-gray-400);
   border-radius: rem(8);
 }
 
 body *::-webkit-scrollbar-thumb {
-  background-color: var(--bs-purple);
+  background-color: var(--bs-black-primary);
   outline: 1px solid var(--bs-tranparent);
   border-radius: rem(8);
 }
